harden: low-risk code quality and security improvements
- Mask basicauth password in logs, downgrade SMS payload logging to DEBUG
- Replace fragile resource handling with try-with-resources (properties,
  watchdog, publishSMS streams)
- Replace printStackTrace() with proper log.error() calls
- Replace System.exit(0) in openPort() with return false
- Replace Runtime.exec(String) with ProcessBuilder for reboot and
  setHostName commands, tighten hostname validation to mobileid0\d{2}
- Add requireProperty/requireIntProperty helpers for fail-fast startup
  config validation with clear error messages
- Use StandardCharsets.UTF_8/UTF_16 instead of string charset literals,
  make getBytes() encoding explicit

No AT command, serial timing, keyword semantic, or SAT flow changes.